--- a/index.html
+++ b/index.html
@@ -1,15 +1,173 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Becomes.co</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap" rel="stylesheet">
+  <style>
+    body,
+    html {
+      margin: 0;
+      padding: 0;
+      background: #131415;
+      font-family: 'Noto Sans', sans-serif;
+    }
+
+    body {
+      display: -ms-grid;
+      display: grid;
+      height: 100vh;
+      -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+      -ms-grid-rows: 2fr 0.5fr;
+      grid-template-rows: 2fr 0.5fr;
+      grid-template-areas: "main""footer";
+      cursor: default;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    main {
+      -ms-grid-row: 1;
+      -ms-grid-column: 1;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      color: #ffffff;
+      grid-area: main;
+      padding: 40px;
+      ;
+    }
+
+    footer {
+      -ms-grid-row: 2;
+      -ms-grid-column: 1;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: end;
+      -ms-flex-align: end;
+      align-items: flex-end;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      grid-area: footer;
+      padding: 0 40px 40px 40px;
+    }
+
+    h2 {
+      -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+      order: 1;
+      margin: 0;
+    }
+
+    svg {
+      -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+      order: 2;
+      height: 42px;
+    }
+
+    a {
+      color: #ffffff;
+      -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+      order: 3;
+      text-transform: uppercase;
+      text-decoration: none;
+      position: relative;
+      display: inline-block;
+      font-size: 18px;
+    }
+
+    a:after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: #ffffff;
+      position: absolute;
+      left: 0;
+      top: 100%;
+    }
+
+    h2 {
+      font-size: 42px;
+      line-height: 1.114;
+    }
+
+    @media screen and (min-width: 320px) {
+      h2 {
+        font-size: calc(42px + 100 * (100vw - 320px) / 1120);
+      }
+
+      svg {
+        height: calc(42px + 38 * (100vw - 320px) / 1120);
+      }
+    }
+
+    @media screen and (min-width: 1440px) {
+      h2 {
+        font-size: 142px;
+      }
+
+      svg {
+        height: 80px;
+      }
+    }
+
+    h1 {
+      position: absolute;
+      opacity: 0;
+      font-size: 0.1px;
+      z-index: -2;
+    }
+
+    .example {
+      display: -ms-grid;
+      display: grid;
+      -webkit-transition: all .5s;
+      -o-transition: all .5s;
+      transition: all .5s;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+      background: -o-linear-gradient(top, white, black);
+      background: linear-gradient(to bottom, white, black);
+    }
+  </style>
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-Hello
-<!-- partial -->
-  
+  <header>
+    <h1 id="title">Becomes</h1>
+  </header>
+  <main class="becomes co">
+    <h2>We're <br>digital product development studio.</h2>
+  </main>
+  <footer>
+    <svg xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="title" viewBox="0 0 355.37 116.86">
+      <title>Becomes logo</title>
+      <desc>Becomes.co</desc>
+      <path
+        d="M100.26 79.54V36.66h7.66V53a9 9 0 0 1 3.58-2.8 13.58 13.58 0 0 1 12.46 1 13.94 13.94 0 0 1 4.93 5.59 18.43 18.43 0 0 1 0 15.76 14 14 0 0 1-4.89 5.58 12.68 12.68 0 0 1-7.08 2.07q-6.31 0-9.48-4.65l-.6 4zm7.52-14.74a8.08 8.08 0 0 0 2.24 6 7.28 7.28 0 0 0 5.28 2.2 7 7 0 0 0 5.36-2.32 8.61 8.61 0 0 0 2.14-6.08 8.51 8.51 0 0 0-2.16-6 7 7 0 0 0-5.34-2.32 7.22 7.22 0 0 0-6.36 3.72 8.57 8.57 0 0 0-1.16 4.43zm27.33-.12a15.73 15.73 0 0 1 4.1-11.18 14 14 0 0 1 10.7-4.39 15.16 15.16 0 0 1 5.48 1 12.23 12.23 0 0 1 4.36 2.82 12.82 12.82 0 0 1 2.91 4.88 20.67 20.67 0 0 1 1 6.87V67H143a6.37 6.37 0 0 0 2.12 4.56 7.25 7.25 0 0 0 5 1.75 8.18 8.18 0 0 0 3.78-.81 4.55 4.55 0 0 0 2.21-2.29h7.37a13.71 13.71 0 0 1-4.83 7.4A15.83 15.83 0 0 1 139.2 76q-4.09-4.29-4.09-11.32zm7.94-3h13a5.45 5.45 0 0 0-1.77-4.1 6.45 6.45 0 0 0-4.51-1.58 6.89 6.89 0 0 0-4.64 1.56 6 6 0 0 0-2.08 4.11zm25.24 3.03a15.56 15.56 0 0 1 4.21-11.18 14.12 14.12 0 0 1 10.71-4.42A14.72 14.72 0 0 1 192.4 52a12.19 12.19 0 0 1 4.6 8.27h-7.4a5.87 5.87 0 0 0-2.3-3.14 6.72 6.72 0 0 0-3.92-1.13 6.45 6.45 0 0 0-5.16 2.46 9.31 9.31 0 0 0-2.07 6.23 9.15 9.15 0 0 0 2.07 6.17 6.7 6.7 0 0 0 5.33 2.41 6.42 6.42 0 0 0 3.87-1.19A5.62 5.62 0 0 0 189.6 69h7.46a13.17 13.17 0 0 1-4.77 8.29 15.58 15.58 0 0 1-19.81-1.41 15.37 15.37 0 0 1-4.19-11.17zm32.71-.06a15.06 15.06 0 0 1 4.4-11.2 16.56 16.56 0 0 1 22.35 0 15 15 0 0 1 4.43 11.2 15.87 15.87 0 0 1-2 8.09 14.07 14.07 0 0 1-5.6 5.51 16.32 16.32 0 0 1-8 2 15.24 15.24 0 0 1-11.15-4.34A15.05 15.05 0 0 1 201 64.65zm7.86 0a9 9 0 0 0 2.14 6.18 7.11 7.11 0 0 0 5.58 2.46 7 7 0 0 0 5.58-2.46 9 9 0 0 0 2.14-6.18 9 9 0 0 0-2.14-6.19 7 7 0 0 0-5.57-2.46 7.13 7.13 0 0 0-5.59 2.46 9 9 0 0 0-2.15 6.19zm29.33 14.89V49.77h6.54l.6 3.95a8.81 8.81 0 0 1 3.15-3.33 8.93 8.93 0 0 1 4.81-1.28q6.29 0 8.53 5.32a9.93 9.93 0 0 1 3.36-3.82 9.06 9.06 0 0 1 5.2-1.5q4.65 0 7.08 3t2.43 8.15v19.28h-7.65V62c0-3.55-1.39-5.33-4.15-5.33a4.57 4.57 0 0 0-3.69 1.77 8.2 8.2 0 0 0-1.54 5.13v16h-7.66V62a6.47 6.47 0 0 0-1-4 3.69 3.69 0 0 0-3.11-1.37 4.56 4.56 0 0 0-3.76 1.85 8.67 8.67 0 0 0-1.44 5.39v15.67zm47.15-14.86a15.69 15.69 0 0 1 4.11-11.18 13.94 13.94 0 0 1 10.69-4.39 15.13 15.13 0 0 1 5.48 1 12.06 12.06 0 0 1 4.38 2.77 12.82 12.82 0 0 1 2.91 4.88 20.66 20.66 0 0 1 1.05 6.87V67h-20.73a6.41 6.41 0 0 0 2.12 4.56 7.27 7.27 0 0 0 5 1.75 8.25 8.25 0 0 0 3.79-.81 4.59 4.59 0 0 0 2.21-2.29h7.37a13.67 13.67 0 0 1-4.84 7.4A15.83 15.83 0 0 1 289.43 76q-4.08-4.29-4.09-11.32zm8-3h13a5.47 5.47 0 0 0-1.76-4.1A6.49 6.49 0 0 0 300 56a6.86 6.86 0 0 0-4.63 1.56 6 6 0 0 0-2.08 4.11zm24.87 8.83h7.51a3.42 3.42 0 0 0 1.16 2.71 4.77 4.77 0 0 0 3.11.93 4.34 4.34 0 0 0 2.71-.76 2.49 2.49 0 0 0 1-2.08 2.71 2.71 0 0 0-1.1-2.27 11.18 11.18 0 0 0-4.27-1.43c-3.25-.56-5.66-1.55-7.21-3a7.54 7.54 0 0 1-2.33-5.83 9.22 9.22 0 0 1 2.87-6.91q2.87-2.78 8.13-2.78a11.45 11.45 0 0 1 7.75 2.59 9.13 9.13 0 0 1 3.19 6.82h-7.6q-.09-3.42-3.4-3.42a3.4 3.4 0 0 0-2.43.81 2.76 2.76 0 0 0-.85 2.12 2.42 2.42 0 0 0 1.1 2.15 11.28 11.28 0 0 0 4.12 1.26c3.51.59 6 1.62 7.47 3.09a8 8 0 0 1 2.22 6 9.87 9.87 0 0 1-.92 4.35 7.81 7.81 0 0 1-2.53 3 11.87 11.87 0 0 1-3.64 1.72 16.41 16.41 0 0 1-4.42.57q-5.42 0-8.44-2.61a9.29 9.29 0 0 1-3.2-7.03zM351 24a4.15 4.15 0 0 1 3.13 1.25 4.43 4.43 0 0 1 1.2 3.19 4.46 4.46 0 0 1-1.2 3.18 4.12 4.12 0 0 1-3.13 1.25 4.18 4.18 0 0 1-3.15-1.26 4.8 4.8 0 0 1 0-6.37A4.21 4.21 0 0 1 351 24zm0 .8a3.32 3.32 0 0 0-2.54 1 4 4 0 0 0 0 5.22 3.32 3.32 0 0 0 2.54 1 3.27 3.27 0 0 0 2.52-1 4 4 0 0 0 0-5.22 3.27 3.27 0 0 0-2.52-1.01zm0 1.29a1.71 1.71 0 0 1 1.2.41 1.39 1.39 0 0 1 .43 1.08 1.43 1.43 0 0 1-.21.79 1.45 1.45 0 0 1-.64.51l1.05 1.91h-1L351 29h-.62v1.78h-.85v-4.7zm0 .77h-.69v1.44h.69a.82.82 0 0 0 .58-.2.68.68 0 0 0 .21-.53.67.67 0 0 0-.21-.52.82.82 0 0 0-.52-.2zM39.07 31.77v-20.5L19.53 0 1.34 10.51 0 11.27v84.06l36 20.76 1.34.77 37.23-21.53V52.27zM3.56 15.39l14.19 8.19v61.5l17.76 10.25v16.39L3.56 93.28zM55 61.49l-16-9.22V35.89L69.23 53.3zM39 72.77V56.39l14.19 8.19V81zm-3.56 0L21.31 81V23.58l14.2-8.19zm1.78 3.09l14.19 8.19-14.12 8.19-14.2-8.19zM39 95.33L55.27 86l1.55-.89V64.58L71 56.39v36.89l-31.93 18.44zM19.53 20.49L5.34 12.3l14.19-8.19 14.2 8.19z"
+        fill="#fff" />
+    </svg>
+    <a href="mailto:inquiry@becomes.co?subject=Inquiry%20from%20Becomes.co">Contact us</a>
+  </footer>
 </body>
+
 </html>
