Add gsuite domain verification

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#000000">
+  
+  <meta name="google-site-verification" content="97Vi5_kcCREIe_qh6B51jpYAbAZ1Fx7MpEnDdEYnQ6Y" />
 
   <style>
     body,
