--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
   <meta name="theme-color" content="#000000">
   
   <meta name="google-site-verification" content="97Vi5_kcCREIe_qh6B51jpYAbAZ1Fx7MpEnDdEYnQ6Y" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172016979-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-172016979-2');
+  </script>
+
 
   <style>
     body,
