Shorten the text

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <body>
   <div class='b'>
-    We are Becomes, a small creative web development studio from Novi Sad, delivering the fastest websites & web apps.
+    We are Becomes, a small creative web development studio, delivering the fastest websites & web apps.
   </div>
   <div class='e'>
     <span>Some of the clients:</span>
