--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://metatags.io/">
+  <meta property="og:url" content="https://becomes.co/">
   <meta property="og:title" content="Becomes.co | Digital product development studio">
   <meta property="og:description" content="We combine strategy, technology and design to build digital products that people love to use.">
   <meta property="og:image" content="/becomes.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://metatags.io/">
+  <meta property="twitter:url" content="https://becomes.co/">
   <meta property="twitter:title" content="Becomes.co | Digital product development studio">
   <meta property="twitter:description" content="We combine strategy, technology and design to build digital products that people love to use.">
   <meta property="twitter:image" content="/becomes.jpg">
